--- a/pom.xml
+++ b/pom.xml
@@ -8,17 +8,21 @@
     <artifactId>testing</artifactId>
     <version>1.0-SNAPSHOT</version>
     <name>testing-system</name>
+    <packaging>war</packaging>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <spring.version>4.0.2.RELEASE</spring.version>
         <jpa.version>1.0.0.Final</jpa.version>
+        <usertype.version>3.0.0.GA</usertype.version>
         <spring.data.jpa.version>1.5.0.RELEASE</spring.data.jpa.version>
         <h2.version>1.3.172</h2.version>
         <jstl.version>1.2</jstl.version>
+        <tiles.version>3.0.4</tiles.version>
         <jsr349.version>1.1.0.Final</jsr349.version>
         <javaee.web.api.version>6.0</javaee.web.api.version>
         <hibernate.validator.version>5.1.0.Final</hibernate.validator.version>
+        <commons.io.version>2.4</commons.io.version>
     </properties>
 
     <dependencies>
@@ -31,6 +35,11 @@
             <groupId>org.hibernate.javax.persistence</groupId>
             <artifactId>hibernate-jpa-2.1-api</artifactId>
             <version>${jpa.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>${usertype.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
@@ -54,6 +63,16 @@
             <version>${jstl.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-core</artifactId>
+            <version>${tiles.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tiles</groupId>
+            <artifactId>tiles-jsp</artifactId>
+            <version>${tiles.version}</version>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
             <version>${jsr349.version}</version>
@@ -68,6 +87,11 @@
             <artifactId>javaee-web-api</artifactId>
             <version>${javaee.web.api.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.io.version}</version>
         </dependency>
     </dependencies>
     <build>
